--- a/apps/docs/documentation/technical-specifications.mdx
+++ b/apps/docs/documentation/technical-specifications.mdx
@@ -8,8 +8,6 @@ description: "Vue d'ensemble de toutes les intéractions pour chaque feature de 
 ## Gestion des utilisateurs
 
 <Accordion title={"Création de compte"}>
-# 🎯 Gestion des Utilisateurs – Création de Compte
-
 ## Front-end
 
 #### Bouton "Créer un compte":
@@ -1616,4 +1614,789 @@ Processus
     - **Tables impactées :**
 
         - `message` : stocke les messages des conversations privées
+</Accordion>
+
+<Accordion title={"Message musical"}>
+## Front-end
+
+    - **Accès :**
+
+        - L’utilisateur accède à une **conversation**
+        - Il clique sur **l’icône de partage**
+
+    - **Sélection :**
+
+        - Il clique sur **l’icône de partage musical**
+        - Une **modal** s’ouvre avec :
+
+            - Une barre de **recherche**
+            - Lors de la saisie et validation, une recherche est lancée sur :
+
+                - La **plateforme de prédilection de l’utilisateur (A)**
+                - Les autres plateformes de musique (Deezer ou Spotify ou Soundcloud)
+
+        - **Résultats :**
+
+            - L’utilisateur sélectionne un morceau à partager dans la liste
+
+    - **Envoi multi-plateformes (logique d'adptation) :**
+
+        - Si le morceau sélectionné est également disponible sur la **plateforme préférée du destinataire (B)**, l’aperçu est adapté à cette plateforme automatiquement côté réception
+        - Si le morceau **n’est pas disponible sur B**, une vérification est faite sur **Spotify** comme fallback
+        - Si le morceau **n’est disponible sur aucune plateforme compatible**, un message est envoyé précisant que le morceau est **"indisponible"**, avec simplement le **titre recherché**
+
+    - **Option supplémentaire :**
+
+        - L’utilisateur peut ajouter un **commentaire textuel optionnel**
+
+    - **Affichage du message :**
+
+        - Message enrichi affichant :
+
+          - **Pochette de l’album**
+          - **Titre et artiste**
+          - **Extrait de 30 secondes** (si fourni par l’API)
+          - **Lien vers la plateforme source** (adaptée au destinataire)
+          - **Commentaire**, s’il a été saisi
+
+## Back-end
+
+    - **Stockage dans la table `message` :**
+
+        - `track` : URL ou ID du morceau (standardisé via une structure `{platform, track_id, fallback_ids}`)
+        - `content` : commentaire optionnel
+
+    - **Routes :**
+
+        - `POST /api/message` → Gère tous les types de messages (y compris musicaux)
+        - `GET /api/message/:message` → Retourne les métadonnées musicales (titre, artiste, etc.)
+
+    - **Traitements back-end détaillés :**
+
+        1. **Recherche multi-plateformes :**
+
+           - Lorsqu’un titre est recherché :
+
+                - L’API de la **plateforme principale de l’émetteur** est interrogée en priorité
+                - En parallèle, des requêtes sont faites vers **Deezer** et **SoundCloud**
+
+            - Le système **mappe** les morceaux entre plateformes (si possible), selon certains critères. (titre, artiste, durée)
+
+        2. **Association à la plateforme du destinataire :**
+
+            - Lors de l’envoi, les **ID correspondants sur chaque plateforme** sont enregistrés dans `media
+            - À la lecture du message, le back détecte la plateforme préférée du destinataire et renvoie :
+
+                - L’extrait, la pochette et le lien depuis **sa plateforme**, si disponible
+                - Sinon, un fallback sur **Spotify** est tenté
+                - Si aucun résultat, le message est renvoyé avec un état `"indisponible", et seul le texte `"Morceau non disponible" avec le titre est affiché
+
+        3. **Métadonnées :**
+
+            - Les métadonnées sont récupérées et stockées (titre, artiste, image, preview URL) pour affichage immédiat sans nouvel appel API
+
+**Règles métier**
+
+    - L’utilisateur doit avoir **au moins une plateforme connectée**
+    - **L’aperçu musical** contient :
+
+          - Pochette
+          - Titre et artiste
+          - Extrait (si disponible)
+          - Lien vers la plateforme source
+
+    - **Le message peut contenir un commentaire texte** optionnel
+    - Le destinataire voit le message **adapté à sa plateforme préférée**
+</Accordion>
+
+<Accordion title={"Messages photo"}>
+## Front-end
+
+    - **Accès :**
+
+        - L’utilisateur accède à une conversation dans l’application de messagerie
+        - Il clique sur l’icône de partage de contenu
+
+    - **Sélection :**
+
+        - Il choisit l’option "Photo"
+        - La galerie photo de son téléphone apparaît :
+
+            - Il peut sélectionner une photo depuis la galerie
+            - Ou bien en prendre une nouvelle via l'appareil photo
+
+    - **Édition facultative :**
+
+        - L’utilisateur peut ajouter un commentaire ou une légende
+
+    - **Affichage du message :**
+
+        - Une fois envoyé, la photo s'affiche dans la conversation :
+
+        - Miniature cliquable
+        - Affichage en plein écran
+        - Légende affichée en-dessous (si renseignée)
+
+## Back-end
+
+    - **Stockage dans la table `message` :**
+
+        - `media` : URL ou ID de la photo stockée (CDN sécurisé)
+        - `content` : légende facultative
+
+    - **Routes :**
+
+        - `POST /api/message`
+
+            - Envoie un message (photo ou autre).
+            - Gère l’upload de la photo (via champ file ou media).
+
+        - `GET /api/message/:message`
+
+            - Retourne les informations du message :
+
+                - Lien direct de la photo.
+                - Commentaire.
+                - Métadonnées si disponibles (pour affichage optimisé).
+
+
+    - **Traitements spécifiques :**
+
+        - **Upload sécurisé :**
+
+            - Upload vers un service de stockage sécurisé (ex: MinIO)
+            - URL sécurisée générée et enregistrée
+
+        - **Prévisualisation :**
+
+            - Miniature générée pour affichage rapide
+
+        - **Conversion automatique :**
+
+            - Format standardisé (JPEG, WebP)
+            - Redimensionnement (ex: max 1080p)
+
+## Règles métier
+
+        - L’utilisateur doit être connecté pour envoyer une photo
+        - La photo est requise, la légende est facultative
+        - L’image est visualisable en plein écran
+        - Formats supportés : JPEG, PNG, WebP
+        - Taille maximale (ex: 10 Mo)
+</Accordion>
+
+<Accordion title={"Liste des conversations"}>
+## Front-end
+
+    - **Accès :**
+
+        - L’utilisateur connecté navigue vers l’onglet **"Messages"**
+
+    - **Affichage :**
+
+        - Liste des conversations actives
+        - Tri par date de dernier message (décroissante)
+        - Chaque ligne contient :
+
+          - Nom du contact ou groupe
+          - Aperçu du dernier message :
+                - Texte
+                - "Vous a partagé un média"
+                - "Vous a partagé une photo"
+          - Horodatage du dernier message
+          - Indicateur si non lu (badge, surbrillance)
+
+    - **Interactions :**
+
+        - Clic sur une conversation pour l’ouvrir
+
+## Back-end
+
+    - **Routes :**
+
+        - `GET /api/conversations` → Retourne la liste des conversations
+
+    - **Table messages (référence) :**
+
+        - Utilisée pour récupérer le contenu du dernier message (`aperçu, timestamp, type)
+
+## Règles métier
+
+    - **Conversations triées par dernier message**
+    - **Conversations non lues** mises en évidence
+    - Si **aucune conversation** : message "Aucune conversation pour le moment"
+</Accordion>
+
+<Accordion title={"Discussions de groupe"}>
+## Front-end
+
+    - **Création de groupe :**
+
+        - L'utilisateur va dans l’onglet **"Messages"**
+        - Sélectionne **"Nouvelle conversation de groupe"**
+        - Il choisit des participants parmi ses **abonnements/abonnés** (multi-sélection possible).
+        - Saisie d’un **nom de groupe** (obligatoire)
+        - Validation → groupe créé, **notification** aux membres
+
+    - **Participation à un groupe :**
+
+        - L'utilisateur rejoint le groupe :
+
+            - Il voit **l’historique des messages**
+            - Il peut **envoyer des messages**
+            - Il accède à la **liste des membres** (si disponible)
+
+## Back-end
+
+    - **Routes principales :**
+
+        - `POST /api/conversation` → Crée un groupe avec `is_group = true`
+        - `GET /api/conversation/:conversation` → Détails du groupe
+        - `POST /api/conversation/:conversation/leave` → Quitter un groupe
+
+    - **Modèle de données :**
+
+        - **Table** `conversation`:
+            - `id` : identifiant du groupe
+            - `is_group`: si c’est un groupe ou une simple conversation entre utilisateurs
+            - `group_name`: nom du groupe
+            - `created_at`
+
+        - **Table** `conversation_participant`:
+            - `conversation_id` : l’id de la conversation
+            - `user_id` : l’id de l’utilisateur
+            - `joined_at`, `left_at` : date où l’utilisateur à rejoint ou quitter le groupe (si ça en est un)
+
+## Règles métier
+
+    - **Tous les membres** peuvent quitter à tout moment
+    - Le **groupe est supprimé** si **tous les membres l’ont quitté**
+</Accordion>
+
+<Accordion title={"Médiathèque des contenus partagés"}>
+
+## Front-end
+
+    - **Accès :**
+
+        - L’utilisateur entre dans une **conversation**
+        - Clique sur **"Médias partagés"** (icône)
+
+    - **Affichage :**
+
+        - Une interface dédiée s’ouvre, organisée en **onglets ou sections** selon le **type de contenu** :
+            - **Photos**
+            - **Musiques**
+        - Affichage en **grille** ou **liste** :
+            - Miniatures (photo/pochette)
+            - Métadonnées clés (titre, date, type)
+
+    - **Filtres :**
+            - Par type de contenu
+            - Par période (ex: "30 derniers jours")
+            - Par mot-clé :
+                - Filtre selon légende, titre ou métadonnées
+
+    - **Interactions :**
+
+        - Clic sur un média :
+            - **Photo** → plein écran, téléchargement
+            - **Musique** → lecteur intégré (extrait)
+
+## Back-end
+
+**Routes principales :**
+
+    - `GET /api/conversation/:conversation/media` → Contenus partagés
+    - `GET /api/media/:media` → Détails d’un média
+    - `POST /api/playlist/from-conversation` → Créer une playlist depuis les musiques partagées
+
+## Règles métier
+
+    - **Seuls les membres d’une conversation** voient les médias
+    - Les contenus **musicaux** ont des **restrictions** selon la plateforme
+    - L’utilisateur peut :
+        - **Créer une playlist** à partir des morceaux
+        - Voir les interactions (like/commentaire) **en temps réel**
+</Accordion>
+
+<Accordion title={"Notifications"}>
+
+## Front-end
+
+    - **Déclencheur :**
+
+        - **Nouveau message** reçu dans une conversation privée ou de groupe
+        - L’utilisateur n’est pas dans la conversation active
+
+    - **Affichage mobile (push) :**
+
+        - Notification affichée en haut de l’écran (iOS/Android)
+        - Contenu :
+            - Nom de l’expéditeur
+            - Texte : **"Vous a envoyé un message"**
+            - Icône de l’application
+            - Son/vibration selon réglages
+
+    - **Interaction utilisateur :**
+
+        - Appui → ouverture directe de la conversation
+        - Si app ouverte → bulle interne ou bannière
+
+## Back-end
+
+    - **Événement déclencheur :**
+
+        - À l’envoi du message :
+            - Vérification que l’utilisateur a activé les notifications
+            - Vérification qu’il n’est pas actif dans la conversation
+
+    - **Traitement :**
+
+        - Envoi push via :
+            - FCM (Android)
+            - APNs (iOS)
+        - Payload :
+            - Nom de l’expéditeur
+            - Texte générique
+            - Lien vers la conversation
+
+## Règles métier
+
+    - Notification **envoyée uniquement si** :
+        - Utilisateur inactif dans la conversation
+        - Notifications activées
+
+    - Les utilisateurs peuvent gérer les notifications
+
+    - Messages de groupe :
+        - Nom de l’utilisateur expéditeur affiché
+        - Option : "dans [Nom du groupe]" possible en extension
+</Accordion>
+
+## Système de Recherche
+
+<Accordion title={"Recherche"}>
+## Front-end
+
+    - **Prérequis**
+
+        - Utilisateur sur l'onglet "Pour vous"
+        - Utilisateur connecté ou non connecté
+
+    - **Interface utilisateur**
+
+        - **Icône de recherche** :
+            - Loupe visible en haut de l'écran
+            - Accessible depuis l'onglet "Pour vous"
+
+        - **Barre de recherche** :
+            - S'ouvre au clic sur la loupe
+            - Champ de saisie pour requête utilisateur
+            - Bouton de validation/recherche
+
+        - **Résultats de recherche** :
+            - Affichage des posts liés à la recherche
+            - Liste verticale avec les mêmes éléments qu'un post classique
+
+    - **Actions utilisateur**
+
+        - **Clic sur la loupe** :
+            - Ouverture de la barre de recherche
+            - Focus automatique sur le champ de saisie
+
+        - **Saisie de la requête** :
+            - Texte libre dans le champ de recherche
+
+        - **Validation de la recherche** :
+            - Clic sur le bouton de recherche ou touche Entrée
+            - Lancement de la recherche et affichage des résultats
+
+## Back-end
+
+    - **Route principale** :
+
+    - `GET /api/search`
+
+    - **Paramètres de requête**
+
+        - `query` : Terme de recherche (obligatoire)
+        - `type` : Type de contenu (posts, users, music, hashtags)
+        - `page` : Numéro de page (optionnel)
+        - `limit` : Nombre de résultats par page (optionnel)
+
+    - **Contrôles serveur**
+
+        - Validation de la requête de recherche (non vide)
+        - Sanitisation du texte de recherche
+        - Gestion des caractères spéciaux
+
+    - **Tables impactées**
+
+        - **Table** `posts` :
+          - Recherche dans description
+          - Recherche dans music_reference (titre, artiste)
+
+        - **Table** `users` :
+          - Recherche par nom d'utilisateur
+
+        - **Table** `hashtags` :
+          - Recherche par tags
+
+    - **Processus**
+
+        1.  **Analyse de la requête** :
+            - Parsing du texte de recherche
+            - Identification des mots-clés
+
+        2. **Recherche multi-critères** :
+            - Recherche dans les descriptions de posts
+            - Recherche dans les métadonnées musicales
+            - Recherche d'utilisateurs
+            - Recherche de hashtags
+
+        3. **Classement des résultats** :
+            - Pertinence par rapport à la requête
+            - Popularité des posts (likes, commentaires)
+            - Date de publication
+</Accordion>
+
+<Accordion title={"Suggestions"}>
+## Front-end
+
+    - **Prérequis**
+
+        - Utilisateur sur l'onglet "Pour vous"
+        - Clic sur l'icône de recherche
+
+    - **Interface utilisateur**
+
+        - **Zone de suggestions** :
+            - Affichage sous la barre de recherche
+            - Liste de suggestions cliquables
+
+        - **Types de suggestions** :
+            - **Utilisateur connecté** : Suggestions basées sur ses préférences
+            - **Utilisateur non connecté** : Tendances de la plateforme
+
+    **Actions utilisateur**
+
+        - **Clic sur l'icône de recherche** :
+            - Affichage automatique des suggestions
+
+        - **Clic sur une suggestion** :
+            - Lancement automatique de la recherche correspondante
+
+## Back-end
+
+**Route principale**
+
+- `GET /api/search/suggestions` :
+
+    - **Contrôles serveur**
+
+        - Vérification du statut de connexion utilisateur
+        - Récupération des préférences utilisateur (si connecté)
+        - Génération des suggestions appropriées
+
+    **Tables impactées**
+
+    - **Table** `user_preferences` (utilisateur connecté) :
+        - Genres musicaux favoris
+        - Artistes écoutés
+        - Historique des recherches
+
+    - **Table** `trending_topics` (utilisateur non connecté) :
+        - Sujets populaires
+        - Hashtags tendances
+        - Artistes du moment
+
+    - **Processus**
+
+        1. **Détection du statut utilisateur** :
+            - Vérification de la connexion
+
+        2. **Génération personnalisée (connecté)** :
+            - Suggestions basées sur les genres favoris
+            - Artistes similaires
+            - Tendances dans ses genres de prédilection
+
+        3. **Génération générale (non connecté)** :
+            - Hashtags les plus populaires
+            - Artistes en tendance globale
+            - Genres musicaux populaires
+
+        4. **Classement des suggestions** :
+            - Pertinence par rapport au profil utilisateur
+            - Popularité générale sur la plateforme
+
+    - **Règles métier**
+        - **Utilisateur connecté** : suggestions personnalisées
+        - **Utilisateur non connecté** : tendances globales
+</Accordion>
+
+## Système de Notifications
+
+<Accordion title={"Notifications Push"}>
+
+## Front-end
+
+    - **Prérequis**
+
+        - Utilisateur connecté
+        - Application installée sur téléphone
+        - Autorisations notifications accordées
+
+    - **Interface utilisateur**
+
+        - **Réception des notifications** :
+            - Affichage natif système (iOS/Android)
+            - Badge sur l'icône de l'application
+
+        - **Types de notifications push** :
+            - Mention dans une story
+            - Message privé reçu
+            - Réponse à un commentaire
+            - Commentaire sur une publication
+            - Like sur une publication
+
+        - **Deep-links** :
+            - Redirection vers l'événement concerné
+            - Ouverture automatique de l'application
+
+    - **Actions utilisateur**
+
+        - **Clic sur la notification** :
+            - Ouverture de l'application
+            - Navigation directe vers le contenu concerné
+
+## Back-end
+
+    - **Route principale** :
+
+        - `POST /api/notifications/push`
+
+    - **Contrôles serveur**
+
+        - Vérification des préférences de notification utilisateur
+        - Validation du token de device
+        - Contrôle de la validité du contenu
+
+    - **Tables impactées**
+
+        - **Table** `notifications` :
+            - id
+            - recipient_id
+            - sender_id
+            - type
+            - content_id
+            - is_read
+            - created_at
+
+        - **Table** `device_tokens` :
+            - user_id
+            - token
+            - platform (ios/android)
+
+    - **Processus**
+
+        1. **Génération de la notification** :
+            - Création en base
+            - Formatage selon le type
+
+        2. **Envoi push** :
+            - Récupération du token device
+            - Envoi via FCM/APNS
+            - Génération du deep-link
+</Accordion>
+
+<Accordion title={"Notifications In-App"}>
+
+## Front-end
+
+    - **Prérequis**
+
+        - Utilisateur connecté
+        - Utilisateur actuellement sur l'application
+
+    - **Interface utilisateur**
+
+        - **Toast/Banner de notification** :
+            - Affichage temporaire en haut de l'écran
+            - Disparition automatique après quelques secondes
+
+        - **Types de notifications in-app** :
+            - Message privé reçu
+            - Erreurs lors d’actions
+            - Confirmations d’actions réussies
+
+    - **Actions utilisateur**
+
+        - **Notification de message** :
+            - Clic pour accéder à la conversation
+
+        - **Notification d’erreur** :
+            - Info sur l’échec
+            - Possibilité de réessayer
+
+## Back-end
+
+    - **Route principale** :
+
+        - `GET /api/notifications/in-app`
+        - `WebSocket/notifications`
+
+    - **Contrôles serveur**
+
+        - Vérification de la session utilisateur active
+        - Filtrage selon le contexte
+        - Gestion temps réel via WebSocket
+
+    - **Tables impactées**
+
+        - **Table** `notifications` :
+            - Structure identique à push
+            - Champ `delivery_type` (push/in-app/both)
+
+    **Processus**
+
+        1. **Détection d’événement** :
+            - Message reçu ou erreur système
+
+        2. **Envoi temps réel** :
+            - Transmission via WebSocket/Mercure
+            - Affichage immédiat
+</Accordion>
+
+<Accordion title={"Paramètres de Notifications"}>
+## Front-end
+
+    - **Prérequis**
+
+        - Utilisateur connecté
+
+    - **Interface utilisateur**
+
+        - **Page de paramètres** :
+            - Liste des types de notifications
+            - Interrupteurs on/off pour chaque type
+            - Sauvegarde automatique
+
+        - **Types configurables** :
+            - Mentions dans stories
+            - Messages privés
+            - Commentaires sur publications
+            - Réponses aux commentaires
+            - Likes sur publications
+
+    - **Actions utilisateur**
+
+        - **Activation/Désactivation** :
+            - Toggle pour chaque type
+            - Sauvegarde immédiate des préférences
+
+## Back-end
+
+    - **Routes principales**
+
+        - `PUT /api/users/notification-preferences`
+        - `GET /api/users/notification-preferences`
+
+    - **Contrôles serveur**
+
+        - Vérification de l'authentification
+        - Validation des types de notifications
+
+    - **Tables impactées**
+
+        - **Table** `notification_preferences` :
+            - user_id
+            - mention_stories
+            - private_messages
+            - post_comments
+            - comment_replies
+            - post_likes
+
+    - **Processus**
+
+        1. **Sauvegarde des préférences** :
+            - Mise à jour des paramètres utilisateur
+
+        2. **Application des préférences** :
+            - Filtrage des notifications selon les choix
+</Accordion>
+
+## Administration
+
+<Accordion title={"Administration"}>
+## Front-end
+
+    - **Prérequis**
+
+        - Utilisateur administrateur
+        - Accès au dashboard via navigateur web
+
+    - **Interface utilisateur**
+
+        - **Tableau de bord** :
+            - Vue d'ensemble des KPI principaux
+            - Graphiques et statistiques
+
+        - **KPI affichés** :
+            - Nombre d'utilisateurs inscrits
+            - Nombre d'utilisateurs connectés par jour
+            - Nombre de posts créés
+            - Statistiques d'engagement
+
+        - **Outils de modération** :
+            - Liste des signalements en attente
+            - Actions sur utilisateurs (bannir, suspendre)
+            - Actions sur contenus (supprimer posts)
+
+    - **Actions administrateur**
+
+        - **Consultation des KPI** :
+            - Affichage des métriques en temps réel
+
+        - **Modération** :
+            - Traitement des signalements
+            - Sanctions utilisateurs
+            - Suppression de contenus
+
+## Back-end
+
+    - **Routes principales** :
+
+        - `GET /api/admin/dashboard`
+        - `GET /api/admin/reports`
+        - `POST /api/admin/users/{id}/ban`
+        - `POST /api/admin/users/{id}/suspend`
+        - `DELETE /api/admin/posts/{id}`
+
+    - **Contrôles serveur**
+
+        - Vérification des droits administrateur
+        - Validation des actions de modération
+        - Logging des actions
+
+    - **Tables impactées**
+
+        - **Table** `admin_actions` :
+            - admin_id, action_type, target_type, target_id, reason, created_at
+
+        - **Table** `user_sanctions` :
+            - user_id, type, reason, expires_at, created_by
+
+    - **Processus**
+
+        1. **Génération des KPI** :
+            - Agrégation des données utilisateurs et contenus
+
+        2. **Traitement des signalements** :
+            - Affichage des reports en attente
+            - Outils de décision
+
+        3. **Actions de modération** :
+            - Application des sanctions
+            - Logging pour audit
 </Accordion>
